[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/text_elem.gd" type="Script" id=1]
[ext_resource path="res://textures/ctrl.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.690196, 0.211765, 0.211765, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.403922, 0.0862745, 0.0862745, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.776471, 0.223529, 0.223529, 1 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.776471, 0.223529, 0.223529, 1 )

[node name="text_ctrl" type="VBoxContainer"]
margin_left = 215.0
margin_top = 270.0
margin_right = 467.0
margin_bottom = 294.0

[node name="hb" type="HBoxContainer" parent="."]
margin_right = 301.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="hb"]
margin_right = 21.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 10.5, 10.5 )
hint_tooltip = "Move"
texture = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="hb"]
margin_left = 25.0
margin_right = 83.0
margin_bottom = 24.0
hint_tooltip = "Text"
text = "text"
max_length = 10

[node name="CheckBox" type="CheckBox" parent="hb"]
margin_left = 87.0
margin_right = 111.0
margin_bottom = 24.0
hint_tooltip = "Render glow"
pressed = true

[node name="LineEdit2" type="LineEdit" parent="hb"]
margin_left = 115.0
margin_right = 173.0
margin_bottom = 24.0
hint_tooltip = "Angle"
text = "0"
max_length = 3

[node name="OptionButton" type="OptionButton" parent="hb"]
margin_left = 177.0
margin_right = 226.0
margin_bottom = 24.0
hint_tooltip = "Size"
text = "1"
items = [ "1", null, false, -1, null, "2", null, false, -1, null, "3", null, false, -1, null ]
selected = 0

[node name="ColorPickerButton" type="ColorPickerButton" parent="hb"]
margin_left = 230.0
margin_right = 275.0
margin_bottom = 24.0
text = "Color"
color = Color( 0.196078, 0.862745, 0.196078, 1 )
edit_alpha = false

[node name="Button" type="Button" parent="hb"]
margin_left = 279.0
margin_right = 301.0
margin_bottom = 24.0
hint_tooltip = "Delete"
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Del"
[connection signal="text_changed" from="hb/LineEdit" to="hb" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="hb/CheckBox" to="hb" method="_on_CheckBox_pressed"]
[connection signal="text_changed" from="hb/LineEdit2" to="hb" method="_on_LineEdit2_text_changed"]
[connection signal="item_selected" from="hb/OptionButton" to="hb" method="_on_OptionButton_item_selected"]
[connection signal="color_changed" from="hb/ColorPickerButton" to="hb" method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="hb/Button" to="hb" method="_on_Button_pressed"]
